--- a/views/admin/pages/dulieuSHLK-create.pug
+++ b/views/admin/pages/dulieuSHLK-create.pug
@@ -4,7 +4,7 @@ include ../mixins/optionXa.pug
 
 
 block main
-  h1.box-title Tạo dữ liệu SRT
+  h1.box-title Tạo dữ liệu SHLK
 
   .section-8
     form#dulieu-create-form
@@ -51,4 +51,4 @@ block main
       .inner-button.inner-two-col
         button.create-wrong Tạo mới
     .inner-back
-      a(href=`/${pathAdmin}/sauromthong/dulieusrt/${matinh}/list`) Quay lại danh sách
+      a(href=`/${pathAdmin}/sauhailakeo/dulieuSHLK/${matinh}/list`) Quay lại danh sách
