--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -22,7 +22,7 @@ nav.sider
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/map/indexth`)
+              a.menu(href=`/${pathAdmin}/sauromthong/mapsrt/38/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
             li 
@@ -38,58 +38,78 @@ nav.sider
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/map/indexna`)
+              a.menu(href=`/${pathAdmin}/sauromthong/mapsrt/40/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/dieutrasrt/40/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Hà Tĩnh
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/srt/indexht`) 
+              a.menu(href=`/${pathAdmin}/sauromthong/dulieusrt/42/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/map/indexht`)
+              a.menu(href=`/${pathAdmin}/sauromthong/mapsrt/42/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/dieutrasrt/42/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Quảng Bình
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/srt/indexqb`) 
+              a.menu(href=`/${pathAdmin}/sauromthong/dulieusrt/44/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.mnenu(href=`/${pathAdmin}/sauromthong/map/indexqb`)
+              a.menu(href=`/${pathAdmin}/sauromthong/mapsrt/44/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/dieutrasrt/44/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Quảng Trị
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/srt/indexqt`) 
+              a.menu(href=`/${pathAdmin}/sauromthong/dulieusrt/47/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/map/indexqt`)
+              a.menu(href=`/${pathAdmin}/sauromthong/mapsrt/47/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/dieutrasrt/47/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Thừa Thiên Huế
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/srt/indextth`) 
+              a.menu(href=`/${pathAdmin}/sauromthong/dulieusrt/46/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/sauromthong/srt/indextth`)
+              a.menu(href=`/${pathAdmin}/sauromthong/mapsrt/46/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
-            
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/dieutrasrt/46/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
+    //- Dropdown: Sâu hại keo        
     li
       div.item_menu
         i.fa-solid.fa-mosquito
@@ -101,73 +121,98 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/saulakeo/srt/indexth`) 
+              a.menu(href=`/${pathAdmin}/sauhailakeo/dulieushlk/38/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/saulakeo/map/indexth`)
+              a.menu(href=`/${pathAdmin}/sauhailakeo/mapshlk/38/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/sauhailakeo/dieutrashlk/38/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Nghệ An
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/saulakeo/srt/indexna`) 
+              a.menu(href=`/${pathAdmin}/sauhailakeo/dulieushlk/40/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/saulakeo/map/indexna`)
+              a.menu(href=`/${pathAdmin}/sauhailakeo/mapshlk/40/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/sauhailakeo/dieutrashlk/40/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Hà Tĩnh
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/saulakeo/srt/indexht`) 
+              a.menu(href=`/${pathAdmin}/sauhailakeo/dulieushlk/42/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/saulakeo/map/indexht`)
+              a.menu(href=`/${pathAdmin}/sauhailakeo/mapshlk/42/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/sauhailakeo/dieutrashlk/42/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Quảng Bình
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/saulakeo/srt/indexqb`) 
+              a.menu(href=`/${pathAdmin}/sauhailakeo/dulieushlk/44/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.mnenu(href=`/${pathAdmin}/saulakeo/map/indexqb`)
+              a.menu(href=`/${pathAdmin}/sauhailakeo/mapshlk/44/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/sauhailakeo/dieutrashlk/44/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Quảng Trị
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/saulakeo/srt/indexqt`) 
+              a.menu(href=`/${pathAdmin}/sauhailakeo/dulieushlk/47/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/saulakeo/map/indexqt`)
+              a.menu(href=`/${pathAdmin}/sauhailakeo/mapshlk/47/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/sauhailakeo/dieutrashlk/47/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Thừa Thiên Huế
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/saulakeo/srt/indextth`) 
+              a.menu(href=`/${pathAdmin}/sauhailakeo/dulieushlk/46/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/saulakeo/srt/indextth`)
+              a.menu(href=`/${pathAdmin}/sauhailakeo/mapshlk/46/list`)
                 i.fa-solid.fa-map-location-dot 
-                | Dữ liệu bản đồ        
+                | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/sauhailakeo/dieutrashlk/46/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
+      //- Bệnh hại lá keo
     li
       div.item_menu
         i.fa-solid.fa-mosquito
@@ -179,73 +224,98 @@ nav.sider
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indexth`) 
+              a.menu(href=`/${pathAdmin}/benhhailakeo/dulieubhlk/38/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/benhlakeo/map/indexth`)
+              a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/38/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/38/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Nghệ An
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indexna`) 
+              a.menu(href=`/${pathAdmin}/benhhailakeo/dulieubhlk/40/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/benhlakeo/map/indexna`)
+              a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/40/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/40/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Hà Tĩnh
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indexht`) 
+              a.menu(href=`/${pathAdmin}/benhhailakeo/dulieubhlk/42/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/benhlakeo/map/indexht`)
+              a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/42/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/42/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Quảng Bình
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indexqb`) 
+              a.menu(href=`/${pathAdmin}/benhhailakeo/dulieubhlk/44/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.mnenu(href=`/${pathAdmin}/benhlakeo/map/indexqb`)
+              a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/44/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/44/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Quảng Trị
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indexqt`) 
+              a.menu(href=`/${pathAdmin}/benhhailakeo/dulieubhlk/47/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/benhlakeo/map/indexqt`)
+              a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/47/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/47/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Thừa Thiên Huế
             i.fa-solid.fa-chevron-down.arrow
           ul.submenu-child
             li 
-              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indextth`) 
+              a.menu(href=`/${pathAdmin}/benhhailakeo/dulieubhlk/46/list`) 
                 i.fa-solid.fa-database 
                 | Dữ liệu SRT
             li 
-              a.menu(href=`/${pathAdmin}/benhlakeo/srt/indextth`)
+              a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/46/list`)
                 i.fa-solid.fa-map-location-dot 
-                | Dữ liệu bản đồ        
+                | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/46/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
+       
       
     li
       div.item_menu
