--- a/views/admin/pages/dulieuBHLK-list.pug
+++ b/views/admin/pages/dulieuBHLK-list.pug
@@ -37,7 +37,7 @@ block main
         <i class="fa-solid fa-magnifying-glass"></i>
         input(type="text" placeholder="Tìm kiếm" search)
       .inner-button-create
-        a(href=`/${pathAdmin}/sauromthong/dulieusrt/${matinh}/create`) + Tạo mới
+        a(href=`/${pathAdmin}/benhhailakeo/dulieuBHLK/${matinh}/create`) + Tạo mới
   //- End Section 5
 
   //- Section 6
@@ -61,8 +61,8 @@ block main
             th(class="inner-center") Chủ rừng
             th Hành động
         tbody
-        if listDulieuSRT.length
-          each item in listDulieuSRT
+        if listDulieuBHLK.length
+          each item in listDulieuBHLK
             tr
               td(class="inner-center")
                 input(type="checkbox" class="inner-check" check-item=item.id)
@@ -79,7 +79,7 @@ block main
               td(class="inner-center") #{item.churung}
               td
                 .inner-buttons
-                  a(href=`/${pathAdmin}/sauromthong/dulieusrt/${matinh}/edit/${item.id}` class="inner-edit")
+                  a(href=`/${pathAdmin}/benhhailakeo/dulieuBHLK/${matinh}/edit/${item.id}` class="inner-edit")
                     i.fa-regular.fa-pen-to-square
                   a(class="inner-delete" button-delete data-api=`/${pathAdmin}/category/delete/${item.id}`)
                     i.fa-regular.fa-trash-can
@@ -92,7 +92,7 @@ block main
 
   //-Section 7
   .section-7
-    span(class="inner-label") Hiển thị #{pagination.skip + 1} - #{listDulieuSRT.length + pagination.skip} của #{pagination.TotalDuLieuSRT.length}
+    span(class="inner-label") Hiển thị #{pagination.skip + 1} - #{listDulieuBHLK.length + pagination.skip} của #{pagination.TotalDuLieuBHLK.length}
     select(class="inner-pagination" pagination)
       - for(let i = 1 ; i <= pagination.totalPage ; i++)
             option(value=i) Trang #{i}
