--- a/views/admin/pages/dulieuSRT-edit.pug
+++ b/views/admin/pages/dulieuSRT-edit.pug
@@ -54,7 +54,7 @@ block main
 
         .inner-group
           label(class="inner-label" for="phancap") Phân cấp
-          select(id="phancap" name="phancap")
+          select(id="phancap" name="phancap" style="font-weight: bold")
             option(value=1 ) 1
             option(value=2 ) 2
             option(value=3 selected) 3
