--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -14,16 +14,16 @@ nav.sider
         i.fa-solid.fa-tree
         |  Quản lý mất rừng
         i.fa-solid.fa-chevron-down.arrow
-      ul.submenu
+      ul.submenu2
         li
           div.item_city 
             <i class="fa-solid fa-check"></i>
-             a(href=`/${pathAdmin}/degrad/list/confirmed`) Đã xác nhận
+             a.menu2(href=`/${pathAdmin}/degrad/list/confirmed`) Đã xác nhận
 
         li
           div.item_city 
             <i class="fa-solid fa-xmark"></i>
-            a(href=`/${pathAdmin}/degrad/list/pending`) Chưa xác nhận
+            a.menu2(href=`/${pathAdmin}/degrad/list/pending`) Chưa xác nhận
     //- Dropdown: Sâu róm thông
     li
       div.item_menu
