--- a/views/client/partials/footer.pug
+++ b/views/client/partials/footer.pug
@@ -5,11 +5,11 @@ footer.footer
       nav.inner-links
         ul
           li
-            a(href="/") Địa chỉ: Thị trấn Xuân Mai, huyện Chương Mỹ, Hà Nội
+            a(href="/") Trang Chủ
           li
-            a(href="#") Hotline: 024 33840233
+            a(href="/about-us") Giới thiệu
           li
-            a(href="#") Email: daihoclamnghiep@vnuf.edu.vn
+            a(href="/contact") Liên hệ
       nav.inner-socials
         ul
           li
