--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -39,13 +39,15 @@ header.header
           li
             a(href="/contact") Liên hệ
         .inner-overlay
-      // Cart
-      if account == "guest"
-        .inner-button
+      // 
+      .inner-button
           a.login(href=`/${pathAdmin}/account/login`) Đăng Nhập
-      else
-        .inner-button
-          div.logout Đăng Xuất
+      //- if account == "guest"
+      //-   .inner-button
+      //-     a.login(href=`/${pathAdmin}/account/login`) Đăng Nhập
+      //- else
+      //-   .inner-button
+      //-     div.logout Đăng Xuất
 
           
 // End Header
