Tuệ thêm phần sửa thông tin người dùng và đội mật khẩu , đổi tên cột

--- a/views/admin/pages/degrad-detail.pug
+++ b/views/admin/pages/degrad-detail.pug
@@ -98,8 +98,8 @@ block main
     .inner-back
         a(
             href=(dataDetail.status === 0 
-            ? "/admin/degrad/list/pending" 
+            ? `/${pathAdmin}/degrad/list/pending` 
             : dataDetail.status === 1 
-            ? "/admin/degrad/list/confirmed" 
-            : "/admin/degrad/list")
+            ? `/${pathAdmin}/degrad/list/confirmed` 
+            : `/${pathAdmin}/degrad/list`)
         ) Quay lại danh sách
