--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -8,6 +8,7 @@ header.header
       //- img(src="/admin/assets/images/icon-bell.svg", alt="")
       //- span 6
     .inner-account
+      //- a(href=`/${pathAdmin}/profile/edit` style="display:flex; align-items:center")
       .inner-avatar
         img(src="/admin/assets/images/avatar-default1.svg", alt="")
       .inner-text
