--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -249,10 +249,10 @@ nav.sider
               a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/38/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
-            li 
-              a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/38/list`)
-                i.fa-solid.fa-magnifying-glass
-                | Điều tra
+            //- li 
+            //-   a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/38/list`)
+            //-     i.fa-solid.fa-magnifying-glass
+            //-     | Điều tra
         li
           div.item_city Nghệ An
             i.fa-solid.fa-chevron-down.arrow
@@ -265,10 +265,10 @@ nav.sider
               a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/40/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
-            li 
-              a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/40/list`)
-                i.fa-solid.fa-magnifying-glass
-                | Điều tra
+            //- li 
+            //-   a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/40/list`)
+            //-     i.fa-solid.fa-magnifying-glass
+            //-     | Điều tra
         li
           div.item_city Hà Tĩnh
             i.fa-solid.fa-chevron-down.arrow
@@ -281,10 +281,10 @@ nav.sider
               a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/42/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
-            li 
-              a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/42/list`)
-                i.fa-solid.fa-magnifying-glass
-                | Điều tra
+            //- li 
+            //-   a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/42/list`)
+            //-     i.fa-solid.fa-magnifying-glass
+            //-     | Điều tra
         li
           div.item_city Quảng Bình
             i.fa-solid.fa-chevron-down.arrow
@@ -297,10 +297,10 @@ nav.sider
               a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/44/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
-            li 
-              a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/44/list`)
-                i.fa-solid.fa-magnifying-glass
-                | Điều tra
+            //- li 
+            //-   a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/44/list`)
+            //-     i.fa-solid.fa-magnifying-glass
+            //-     | Điều tra
         li
           div.item_city Quảng Trị
             i.fa-solid.fa-chevron-down.arrow
@@ -313,10 +313,10 @@ nav.sider
               a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/47/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
-            li 
-              a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/47/list`)
-                i.fa-solid.fa-magnifying-glass
-                | Điều tra
+            //- li 
+            //-   a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/47/list`)
+            //-     i.fa-solid.fa-magnifying-glass
+            //-     | Điều tra
         li
           div.item_city Thừa Thiên Huế
             i.fa-solid.fa-chevron-down.arrow
@@ -329,10 +329,10 @@ nav.sider
               a.menu(href=`/${pathAdmin}/benhhailakeo/mapbhlk/46/list`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
-            li 
-              a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/46/list`)
-                i.fa-solid.fa-magnifying-glass
-                | Điều tra
+            //- li 
+            //-   a.menu(href=`/${pathAdmin}/benhhailakeo/dieutrabhlk/46/list`)
+            //-     i.fa-solid.fa-magnifying-glass
+            //-     | Điều tra
        
       
     li
@@ -363,10 +363,10 @@ nav.sider
             |  Liên hệ
     hr
 
-    //- li
-    //-   a(href="")
-    //-     i.fa-solid.fa-user-gear
-    //-     |  Thông tin cá nhân
+    li
+      a(href=`/${pathAdmin}/profile/edit`)
+        i.fa-solid.fa-user-gear
+        |  Thông tin cá nhân
 
     li
       a(href="javascript:;", class="inner-logout")
