--- a/views/admin/pages/degrad-list.pug
+++ b/views/admin/pages/degrad-list.pug
@@ -84,6 +84,7 @@ block main
                               a.inner-map(
                                     href=`/?bando=Sauromthong_6tinh&xa=${item.ten_xa}&tk=${item.tk}&khoanh=${item.khoanh}&lo=${item.lo}`
                                     target="_blank"
+                                    style ="color: inherit;"
                                   )
                                     i.fa-solid.fa-map-location-dot
 
