--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -8,13 +8,13 @@ header.header
       //- img(src="/admin/assets/images/icon-bell.svg", alt="")
       //- span 6
     .inner-account
-      //- a(href=`/${pathAdmin}/profile/edit` style="display:flex; align-items:center")
-      .inner-avatar
-        img(src="/admin/assets/images/avatar-default1.svg", alt="")
-      .inner-text
-        .inner-name #{account.full_name}
-        .inner-role #{account.rolename}
-        //- .inner-name Quang Doanh
-        //- .inner-role Admin
+      a(href=`/${pathAdmin}/profile/edit` style="display:flex; align-items:center")
+        .inner-avatar
+          img(src="/admin/assets/images/avatar-default1.svg", alt="")
+        .inner-text
+          .inner-name #{account.full_name}
+          .inner-role #{account.rolename}
+          //- .inner-name Quang Doanh
+          //- .inner-role Admin
     button.inner-button-menu
       <i class="fa-solid fa-bars"></i>
