--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -28,7 +28,7 @@ html
     main.main
       block main
     //- End Main
-    script(src="/assets/js/map.js")
+    //- script(src="/assets/js/map.js")
     script(src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js") 
     script(src="https://unpkg.com/filepond-plugin-file-validate-type/dist/filepond-plugin-file-validate-type.js") 
     script(src="https://unpkg.com/filepond@^4/dist/filepond.js")
